# docs/swagger.yaml
@@ -171,8 +171,6 @@ definitions:
     properties:
       can_block:
         type: boolean
-      can_pause_for_approval:
-        type: boolean
       can_rewrite_input:
         type: boolean
       can_rewrite_tool_args:
@@ -310,6 +308,14 @@ definitions:
     - EffectApprovalRequired
     - EffectDeny
     - EffectExclusion
+  types.Disposition:
+    enum:
+    - allow
+    - deny
+    type: string
+    x-enum-varnames:
+    - DispositionAllow
+    - DispositionDeny
   types.HostDescriptor:
     properties:
       kind:
@@ -408,8 +414,8 @@ definitions:
         type: string
       decision_id:
         type: string
-      effect:
-        $ref: '#/definitions/types.Effect'
+      disposition:
+        $ref: '#/definitions/types.Disposition'
       explanation:
         $ref: '#/definitions/types.DecisionExplanation'
       obligations:
